--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>Plot</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+</style>
 </head>
 <body>
     <img src="data:image/png;base64,{{ plot_url }}" alt="plot">
