--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Plot</title>
+    <title>Plots</title>
     <style>
         body {
             background-color: black;
             color: white;
             font-family: Arial, sans-serif;
         }
-</style>
+        .plot-container {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        .plot {
+            margin-right: 20px;
+        }
+    </style>
 </head>
 <body>
-    <img src="data:image/png;base64,{{ plot_url }}" alt="plot">
+    <div class="plot-container">
+        <div class="plot">
+            <h2>Verify Duration Plot</h2>
+            <img src="data:image/png;base64,{{ verify_plot_url }}" alt="Verify Duration Plot">
+        </div>
+        <div class="plot">
+            <h2>Proof Duration Plot</h2>
+            <img src="data:image/png;base64,{{ proof_plot_url }}" alt="Proof Duration Plot">
+        </div>
+    </div>
 </body>
 </html>
