--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,12 @@
         }
         .plot-container {
             display: flex;
-            justify-content: space-around;
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
         }
         .plot {
-            margin-right: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
